--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "application-tracker-frontend",
   "version": "0.1.0",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://floating-tundra-88204.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
